# neural-architect

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  chatbot.py  pyproject.toml  requirements.lock.txt  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Downloads/hackathon-soc/hackathon-soc/ai_service/: main.py  neural_architect_minimal.py  nl_to_spl.py  readme.md  report.py  requirements.txt
data/samples/: README.md
docs/: CHANGES.md  architecture.md  demo_video_script.md  deployment.md  linkedin_post.md
eval/: README.md  benchmark.py
eval/golden/: apt_phishing_to_ransomware.json  insider_data_exfil.json  web_exploit_to_rce.json
scripts/: run_api.sh  run_streamlit.sh
src/neural_architect/: __init__.py  cli.py
src/neural_architect/api/: main.py
src/neural_architect/core/: __init__.py  analyzer.py  ioc_extractor.py  log_parser.py  models.py
src/neural_architect/exporters/: __init__.py  markdown.py  stix.py
src/neural_architect/llm/: __init__.py  gemini_client.py  prompts.py
src/neural_architect/ui/: chatbot.py  streamlit_app.py  visualizer.py
tests/: test_ioc_extractor.py  test_log_parser.py  test_models.py
